<resources>
    <string name="app_name">FastWay</string>
    <string name="action_settings">Settings</string>
    <string name="terms">By registering you Agree to the terms of the service</string>
    <string name="username">Username</string>
    <string name="instruct"><b>Lost Password</b>\n
                            Follow these simple steps to reset your account:\n
                            1)Enter your <i>username</i>\n
                            2)Wait for your recovery details to be sent to your email\n
                            3)Follow instructions and be re-united with your Trafficapp account</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="forgot">Have you forgot your password?</string>
    <string name="welcome">Welcome to TrafficApp!!</string>
    <string name="loggedin">Logged in</string>
    <string name="registered">Registered</string>
    <string name="action">Please select if you are by car or by foot.</string>
    <string name="actioncar">Please select if you are to take instructions for your way or if you want to give us feedback for your destination.</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="destination_hint">test</string>
    <string name="current">Current Location</string>
    <string name="destination">Your Destination</string>
    <string name="start">Start</string>
    <string name="waiting_message">We are calculating the time you want to arrive in your destination.\n
                                  The application will run in the background!\n
                                  <b>Please do not close the application just minimize it!</b>\n
                                  We will give you some stat when you will arrive in your destination!</string>


    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_map">Map</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="title_activity_destination">Destination</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="direction">Get Directions</string>
    <string name="finish">You have arrived in your destination</string>
    <string name="distance">Total distance:</string>
    <string name="time">Total time:</string>
    <string name="finishBtn">Finish</string>
    <string name="error_name">Please add a username!</string>
    <string name="error_password">Please enter password!</string>
    <string name="invalidlogin">Wrong username or password!</string>
    <string name="userExist">Username already exist!</string>
    <string name="title_activity_select_map">SelectMap</string>
    <string name="Fast">Fast Route</string>
    <string name="Standar">Standar Route</string>
    <string name="title_activity_fast_destination">FastDestination</string>
    <string name="find">Find Route</string>
    <string name="title_activity_fastest_way_map">Map</string>
    <string name="connection">Internet Connection</string>
    <string name="noconnection">No Internet connection.\\nPlease make sure that you are connected.</string>
    <string name="retry">Retry</string>
    <string name="exit">EXIT</string>
</resources>
