<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:divider="@drawable/dividerwidth2"
    >

    <AutoCompleteTextView
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/write_text"
        android:drawableLeft="@drawable/ic_my_location_black_18dp"
        android:drawablePadding="9dp"
        android:gravity="center"
        android:hint="@string/from"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="@color/grey"
        android:textSize="20dp" />

    <AutoCompleteTextView
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/write_text"
        android:drawableLeft="@drawable/ic_place_black_18dp"
        android:drawablePadding="9dp"
        android:gravity="center"
        android:hint="@string/to"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:maxLines="1"/>




    <Button
        android:id="@+id/direction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:onClick="direction"
        android:text="@string/direction"
        android:textColor="@color/white"
        android:textSize="20dp" />








</LinearLayout>