<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:google="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:divider="@drawable/divider2"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:showDividers="middle"
        android:weightSum="1">




        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/darkergrey"
            android:text="@string/finish"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:divider="@drawable/dividerwidth2"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="1">

            <TextView
                android:id="@+id/message2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/darkergrey"
                android:text="@string/distance"
                />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/darkergrey"

                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:divider="@drawable/dividerwidth2"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="1">

            <TextView
                android:id="@+id/message3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/darkergrey"
                android:text="@string/time"
                />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/darkergrey"

                />



        </LinearLayout>


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:onClick="finish"
            android:text="@string/finishBtn"
            android:textColor="@color/white"
            android:textSize="20dp" />







    </LinearLayout>
</LinearLayout>
